[gd_scene load_steps=8 format=3 uid="uid://buu8ff4ffpikq"]

[ext_resource type="Texture2D" uid="uid://dqwmleeri8x3j" path="res://Assets/Graphics/othericonatlas.png" id="1_gpvny"]
[ext_resource type="FontFile" uid="uid://cdwlkjegxsf3m" path="res://Assets/Fonts/catshop/CatShop.ttf" id="1_q0ogm"]
[ext_resource type="Script" path="res://Game/UI/particletooltip.gd" id="1_vgsye"]
[ext_resource type="FontFile" uid="uid://ct4y3rnndcu5n" path="res://Assets/Fonts/Rubik/static/Rubik-Medium.ttf" id="2_2khgf"]
[ext_resource type="FontFile" uid="uid://bbcr4m4d7iemb" path="res://Assets/Fonts/GreekSprt/NotoSerifDisplay-Medium.ttf" id="2_tji34"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ynjq"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="AtlasTexture" id="AtlasTexture_k6skc"]
resource_local_to_scene = true
atlas = ExtResource("1_gpvny")
region = Rect2(0, 0, 96, 96)

[node name="tooltip" type="PanelContainer"]
visible = false
custom_minimum_size = Vector2(80, 0)
theme_override_styles/panel = SubResource("StyleBoxFlat_6ynjq")
script = ExtResource("1_vgsye")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = -5

[node name="Icon" type="TextureRect" parent="VBoxContainer"]
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = SubResource("AtlasTexture_k6skc")
expand_mode = 1

[node name="space" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="combinationid" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.168627, 0.176471, 0.2, 1)
theme_override_fonts/normal_font = ExtResource("2_2khgf")
theme_override_font_sizes/normal_font_size = 9
text = "50+50"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="UnitType" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_2khgf")
theme_override_font_sizes/normal_font_size = 15
bbcode_enabled = true
text = "alloy"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="ElementName" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("1_q0ogm")
theme_override_fonts/mono_font = ExtResource("2_tji34")
theme_override_font_sizes/normal_font_size = 45
theme_override_font_sizes/mono_font_size = 45
bbcode_enabled = true
text = "[wave]m[code]Î¾"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="spaceB" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="iso" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.168627, 0.176471, 0.2, 1)
theme_override_fonts/normal_font = ExtResource("2_2khgf")
theme_override_font_sizes/normal_font_size = 9
text = "isotope:"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="spaceC" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="IsotopicTier" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.168627, 0.176471, 0.2, 1)
theme_override_fonts/normal_font = ExtResource("2_2khgf")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[right]100"
fit_content = true
scroll_active = false
